--- a/templates/index.html
+++ b/templates/index.html
@@ -20,30 +20,13 @@
     <div class="row">
       <h1>The Results are:</h1>
 
-      <table class="table">
-        <thead><tr>
-          <th>Item Name</th>
-          <th>Quantity</th>
-          <th>Unit Price (The Forge)</th>
-          <th>Refined Price (The Forge)</th>
-          <th>Refining Loss</th>
-        </tr></thead>
-        {% for appraisal in appraisals: %}
-        <tr>
-          <td>{{ appraisal['name'] }}</td>
-          <td>{{ appraisal['quantity'] }}</td>
-          <td>{{ "%.2f" % appraisal['market_price'] }}</td>
-          <td>{{ "%.2f" % appraisal['refined_value'] }}</td>
-          <td>{{ "%.2f%%" % appraisal['refining_loss'] }}</td>
-        </tr>
-        {% endfor %}
-      </table>
+      {% include 'appraisals.html' %}
     </div>
     {% endif %}
 
     <div class="row">
       <h1>Paste a list of items below:</h1>
-      <form action="/" method="POST">
+      <form method="POST">
         <div class="form-group">
           <textarea class="form-control" id="raw_textarea" name="raw_textarea" rows="20" placeholder="paste stuff to evaluate here. protip: ctrl+a, ctrl+c, ctrl+v"></textarea>
         </div>
